syntax = "proto3";

option go_package = "github.com/ofey404/experiments/cleancode/forward-backward-compatibility/grpc/v1alpha1";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;

  // the most frequently exchanged data should have the smallest field numbers.
  // so we reserved some field numbers for future use.
  reserved 2 to 4;

  // deprecate a field by reserving its field number.
  string deprecate_by_reserve = 5;
  string deprecate_by_mark = 6;

  string change_field_type = 7;
  reserved 8;  // for new type

  // Change single field to array
  // 
  // Way 1: Old code see a single element.
  //
  // in protobuf, a single field could be changed to repeated,
  // and the old code could still read one element in the new message.
  string change_to_array_by_add_repeated = 9;
  // Way 2: Old code see a empty value.
  string change_into_array_by_reserve_and_add_a_new_field = 10;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
